# UTM_e-Report_System

./: .gitignore  LICENSE  README.md
AI/: .gitignore  README.md  main.py  pyproject.cpu.toml  pyproject.toml  setup_pytorch.py  test.py
AI/Yolov8n/Training/: CarPlate.ipynb
AI/Yolov8n/train/: args.yaml
AI/models/Yolov8n/train/: results.csv
AI/services/: face_processing.py  model_downloader.py  plate_identifier.py
Flutter/: README.md  pubspec.yaml
Flutter/android/app/: build.gradle.kts
Flutter/android/app/src/debug/: AndroidManifest.xml
Flutter/android/app/src/main/: AndroidManifest.xml
Flutter/android/app/src/main/res/xml/: network_security_config.xml
Flutter/assets/: .env  .env.example
Flutter/ios/Runner/: Info.plist
Flutter/lib/: custom_firebase_options.dart  main.dart
Flutter/lib/screens/: auth_wrapper.dart  contact_list_screen.dart  email_verification_screen.dart  emergency_screen.dart  feedback_screen.dart  home_screen.dart  report_detail_screen.dart  report_screen.dart  status_screen.dart  suspicious_report_screen.dart  traffic_report_screen.dart
Flutter/lib/screens/login_screen/: login_screen.dart
Flutter/lib/screens/login_screen/components/: bottom_text.dart  login_content.dart  top_text.dart
Flutter/lib/services/: auth_service.dart  face_detection_service.dart  license_plate_service.dart
Laravel/: .env.example  .gitignore  1.html  README.md  composer.json  nixpacks.toml  package-lock.json  package.json
Laravel/app/Http/Middleware/: HandleInertiaRequests.php
Laravel/bootstrap/: app.php
Laravel/public/: chat-proxy.php
Laravel/resources/css/: dashboard.css
Laravel/resources/js/: ReportApp.jsx  report.jsx
Laravel/resources/js/Components/: ApplicationLogo.jsx  ChatBox.jsx  Header.jsx  PhotoPreview.jsx  ReportHeatmap.jsx  ReportModal.jsx  ReportTable.jsx  SearchBar.jsx  Sidebar.jsx  StatCard.jsx
Laravel/resources/js/Components/Glass/: GlassBadge.jsx  GlassButton.jsx  GlassCard.jsx  GlassInput.jsx
Laravel/resources/js/Layouts/: AuthenticatedLayout.jsx  GuestLayout.jsx
Laravel/resources/js/Pages/: Dashboard.jsx  FeedbackDetail.jsx  Feedbacks.jsx  ReportDashboard.jsx  ReportDetail.jsx  ReportHistory.jsx  Reports.jsx  ReviewReports.jsx  Settings.jsx  Statistics.jsx  Welcome.jsx
Laravel/resources/js/Pages/Auth/: Login.jsx  Register.jsx  VerifyEmail.jsx
Laravel/resources/js/hooks/: useReports.js
Laravel/resources/views/: reports.blade.php
Laravel/routes/: web.php
