[project]
name = "ai"
version = "0.1.0"
description = "A AI api for UTM Report System"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "absl-py==2.3.1",
    "addict==2.4.0",
    "annotated-doc==0.0.3",
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "asttokens==3.0.0",
    "astunparse==1.6.3",
    "attrs==25.4.0",
    "backcall==0.2.0",
    "basicsr==1.4.2",
    "beautifulsoup4==4.14.2",
    "bleach==6.3.0",
    "certifi==2025.10.5",
    "charset-normalizer==3.4.4",
    "click==8.3.0",
    "colorama==0.4.6",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "decorator==5.2.1",
    "defusedxml==0.7.1",
    "docopt==0.6.2",
    "easyocr>=1.7.2",
    "executing==2.2.1",
    "facexlib==0.3.0",
    "fastapi==0.120.1",
    "fastjsonschema==2.21.2",
    "filelock==3.20.0",
    "filterpy==1.4.5",
    "flatbuffers==25.9.23",
    "fonttools==4.60.1",
    "fsspec==2025.10.0",
    "future==1.0.0",
    "gast==0.6.0",
    "gdown==5.2.0",
    "gfpgan==1.3.8",
    "google-pasta==0.2.0",
    "grpcio==1.76.0",
    "h11==0.16.0",
    "h5py==3.15.1",
    "httptools==0.7.1",
    "idna==3.11",
    "imageio==2.37.2",
    "ipython==8.12.3",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "joblib==1.5.2",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.9.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.9.1",
    "jupyterlab-pygments==0.3.0",
    "keras==3.12.0",
    "kiwisolver==1.4.9",
    "lazy-loader==0.4",
    "libclang==18.1.1",
    "llvmlite==0.45.1",
    "lmdb==1.7.5",
    "lpips==0.1.4",
    "lz4==4.4.4",
    "markdown==3.10",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "matplotlib==3.10.7",
    "matplotlib-inline==0.2.1",
    "mdurl==0.1.2",
    "mistune==3.1.4",
    "ml-dtypes==0.5.3",
    "mpmath==1.3.0",
    "mtcnn==1.0.0",
    "namex==0.1.0",
    "nbclient==0.10.2",
    "nbconvert==7.16.6",
    "nbformat==5.10.4",
    "networkx==3.5",
    "numba==0.62.1",
    "numpy==2.3.4",
    "opencv-python==4.11.0.86",
    "opt-einsum==3.4.0",
    "optree==0.17.0",
    "packaging==25.0",
    "pandocfilters==1.5.1",
    "parso==0.8.5",
    "pickleshare==0.7.5",
    "pillow==12.0.0",
    "pipreqs==0.5.0",
    "platformdirs==4.5.0",
    "prompt-toolkit==3.0.52",
    "protobuf==6.33.0",
    "pure-eval==0.2.3",
    "pydantic==2.12.3",
    "pydantic-core==2.41.4",
    "pygments==2.19.2",
    "pyparsing==3.2.5",
    "pysocks==1.7.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "python-multipart==0.0.20",
    "pyyaml==6.0.3",
    "pyzmq==27.1.0",
    "realesrgan",
    "referencing==0.37.0",
    "requests==2.32.5",
    "rich==14.2.0",
    "rpds-py==0.28.0",
    "scikit-image==0.25.2",
    "scipy==1.16.3",
    "setuptools==80.9.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.8",
    "stack-data==0.6.3",
    "starlette==0.49.1",
    "sympy==1.14.0",
    "tb-nightly==2.21.0a20251023",
    "tensorboard==2.20.0",
    "tensorboard-data-server==0.7.2",
    "tensorflow==2.20.0",
    "termcolor==3.2.0",
    "tifffile==2025.10.16",
    "tinycss2==1.4.0",
    "torch==2.9.0",
    "torchvision==0.24.0",
    "tornado==6.5.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "ultralytics>=8.3.237",
    "urllib3==2.5.0",
    "uvicorn==0.38.0",
    "watchfiles==1.1.1",
    "wcwidth==0.2.14",
    "webencodings==0.5.1",
    "websockets==15.0.1",
    "werkzeug==3.1.3",
    "wheel==0.45.1",
    "wrapt==2.0.0",
    "yapf==0.43.0",
    "yarg==0.1.9",
]

[tool.uv.sources]
realesrgan = { git = "https://github.com/xinntao/Real-ESRGAN.git", rev = "a4abfb2979a7bbff3f69f58f58ae324608821e27" }
